Fixed Net Link logo, logo-text spacing and a bit of text.

--- a/css/css/main.css
+++ b/css/css/main.css
@@ -184,6 +184,11 @@ section {
   color: #D2C295;
 }
 
+#expertise img {
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
 .uni-title {
   font-weight: bold;
   font-size: 17px;
